# SkyWaveERB

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  ABSOLUTE_PERFECT_FINAL_REPORT.md  ANALYSIS_SUMMARY.md  ARCHITECTURE_DIAGRAM.md  AUTO_UPDATE_SYSTEM.md  BUILD_GUIDE.md  BUILD_INSTRUCTIONS.md  BUILD_SUCCESS.md  BUILD_SUMMARY.md  CHANGELOG-v1.3.1.md  CHANGELOG-v1.3.5.md  CHANGELOG-v1.3.6.md  CHANGELOG.md  CHANGELOG_V1.0.3.md  CHART_OF_ACCOUNTS_GUIDE.md  CHART_OF_ACCOUNTS_README.md  CLEANUP_UPDATE.md  CLIENT_LOGO_IMPROVEMENTS_v1.3.2.md  CODE_CLEANUP_REPORT.md  COMMIT_MESSAGE_v2.0.1.txt  COMPLETE_FINAL_AUDIT.md  COMPLETE_FIX_SUMMARY.md  COMPREHENSIVE_ANALYSIS_REPORT.md  COMPREHENSIVE_CODE_ANALYSIS.md  COMPREHENSIVE_FIXES_REPORT.md  CORE_FIXES_COMPLETE.md  CORRECTED_SEND_WHATSAPP_METHOD.py  CRITICAL_FIX_UPDATE_DELETE_SIGNALS.md  CURSOR_USAGE_EXAMPLES.md  DB_CONTEXT_ERRORS_FIXED.md  DETAILED_FIX_GUIDE.md  DETAILED_ISSUES_BY_CATEGORY.md  DEVELOPER_NOTES.md  DEVOPS_INSTALLATION_REPORT.md  DISTRIBUTION_GUIDE.md  EXECUTIVE_SUMMARY_AR.md  (+242 more)
.hypothesis/constants/: 001751d4a1627b74  001c6b21ffb82444  004e722d2b39195a  009a603b7dec2bd0  00a4c3231a86c541  01341b2c9e986b34  0189af9862b72772  032bb05e75ff8d56  03426db49157c9b3  03a0bc33c3be41ac  03a82e244d883f5c  03c8c9b4ee5dec5d  041b82baf95116f0  05f4e8f4e3a08397  0628f2618034526e  066b2d937428b85b  069f1bbe681b4325  06c88ddd0840a021  07475514dc0bbadb  075aa0dd31e12c03  0768246cba53164c  07b8446a052edf99  07c6befa145390fb  085450b5d974e814  089df1b6b10e6e5d  08a45b14b7a1aa82  08fecaa6fc30fcf0  0929c6f30b12fecf  09482feeaa124f43  09ae28b390a241d0  09c81903f676ff40  0a89590eb29921f1  0acdb75d5d5a8d7e  0ba89159ef525d04  0bb70d1826311e40  0bc3b2f77e74ecd9  0c5c5e15615e3822  0c96c1d9ea0443a8  0cfa12dfbf9e9abb  0e7ebddf91ecc5f8  (+534 more)
.hypothesis/tmp/: tmp00_l6rct  tmp0mexli5s  (+88 more)
core/: README.md  __init__.py  account_filters.py  advanced_sync_manager.py  auth_models.py  auto_sync.py  base_service.py  cache_manager.py  color_utils.py  config.py  conflict_resolver.py  conflict_resolver_v2.py  context_menu.py  cursor_manager.py  custom_fields_manager.py  dashboard_models.py  data_loader.py  db_context.py  db_doctor.py  db_maintenance.py  device_identity.py  error_handler.py  error_handler_v2.py  event_bus.py  keyboard_shortcuts.py  lazy_tab_loader.py  live_watcher.py  logger.py  logo_utils.py  monitoring.py  notification_bridge.py  optimizations.py  performance.py  performance_optimizer.py  project_currency.py  realtime_sync.py  repository.py  repository.py.backup_20260120_003906  resource_manager.py  resource_utils.py  (+18 more)
docs/: BUG_LOG_UI.csv  CHANGES_PERF_SETTINGS.md  CRASH_FIX.md  DESIGN_SYSTEM.md  MANUAL_UI_CHECKLIST.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_REPORT.md  PROFESSIONAL_DB_CLEANUP.md  TEST_REPORT_UI.md  pylint_before.json
erp_browser_profile/: DevToolsActivePort  Local State
exports/: .gitkeep  الزعيم_لكمليات_السيارات - مشروع_ا_ابراهيم_محفوظ_-_122025.html  ايه_للاقمشه - Ads_debug.html  جنرال_ميدو - فيديوهات_براتو_debug.html
reports/: bandit_core_hardening_only.json  bandit_report.json  bandit_report_after_hardening.json  db_cleanup_report_apply_20260226_231101.json  db_cleanup_report_apply_20260227_004108.json  db_cleanup_report_dry_run_20260226_231002.json  db_cleanup_report_dry_run_20260226_231148.json  db_cleanup_report_dry_run_20260227_004044.json
services/: accounting_service.py  accounting_service_v2.py  auto_update_service.py  client_service.py  expense_service.py  export_service.py  hr_service.py  invoice_printing_service.py  invoice_service.py  notification_service.py  pdf_service.py  printing_service.py  project_printing_service.py  project_service.py  quotation_service.py  search_service.py  service_service.py  settings_service.py  smart_scan_service.py  smart_scan_service_v2.py  template_service.py  update_service.py
tests/: __init__.py  conftest.py  test_account_filters.py  test_accounting_service.py  test_client_service.py  test_color_utils.py  test_config.py  test_conflict_resolver.py  test_critical_logic.py  test_dashboard_models.py  test_dashboard_period_selector.py  test_dashboard_refresh_error.py  test_data_loader_cancel.py  test_db_maintenance_safety.py  test_event_bus_compat.py  test_expense_service_stats.py  test_export_service.py  test_keyboard_shortcuts.py  test_main_app_startup.py  test_notification_bridge_fallback.py  test_notification_bridge_sync_policy.py  test_notification_service_lifecycle.py  test_notification_system_api.py  test_project_service_duplicate_names.py  test_repository.py  test_repository_concurrency.py  test_repository_payments_linking.py  test_repository_soft_delete_guards.py  test_resource_utils.py  test_secrets_scan.py  test_security.py  test_service_signal_scope.py  test_settings_service.py  test_signals_sync.py  test_smoke_imports.py  test_sqlite_identifiers.py  test_styles_buttons.py  test_sync_manager.py  test_template_service_invoice_numbers.py  test_template_service_pdf_export.py  (+7 more)
tools/: audit_project.py  audit_sqlite.py  benchmarks.py  check_change_stream_support.py  enable_local_replset.ps1  enable_remote_replset.py  perf_audit.py  professional_db_cleanup.py  profile_ui_runtime.py
ui/: account_editor_dialog.py  accounting_manager.py  advanced_search_widget.py  auto_open_combobox.py  client_editor_dialog.py  client_manager.py  currency_editor_dialog.py  custom_spinbox.py  custom_widgets.py  dashboard_tab.py  design_system.py  example_responsive_dialog.py  expense_editor_dialog.py  expense_manager.py  hr_manager.py  invoice_preview_dialog.py  invoice_scan_widget.py  ledger_window.py  loading_overlay.py  login_window.py  main_window.py  modern_splash.py  notification_system.py  notification_widget.py  payment_dialog.py  payments_manager.py  professional_splash.py  project_manager.py  project_profit_dialog.py  quotation_editor.py  quotation_manager.py  responsive_toolbar.py  service_editor_dialog.py  service_manager.py  settings_tab.py  shortcuts_help_dialog.py  smart_alerts_widget.py  smart_combobox.py  smart_employee_dialog.py  smart_invoice_form.py  (+10 more)
(+2740 files in other folders)
