# pyproject.toml - إعدادات المشروع

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skywave-erp"
version = "2.2.2"
description = "نظام إدارة موارد المؤسسات - Sky Wave ERP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Sky Wave Team", email = "dev@skywave.agency"}
]
keywords = ["erp", "accounting", "invoicing", "business"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]

dependencies = [
    "PyQt6>=6.5.0",
    "PyQt6-WebEngine>=6.5.0",
    "Jinja2>=3.1.3",
    "Pillow>=10.0.0",
    "arabic-reshaper>=3.0.0",
    "colorlog>=6.7.0",
    "dnspython>=2.4.0",
    "matplotlib>=3.7.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pydantic>=2.4.0",
    "pymongo>=4.5.0",
    "python-bidi>=0.4.2",
    "python-dateutil>=2.8.2",
    "reportlab>=4.0.0",
    "requests>=2.28.0",
    "weasyprint>=60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-html>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "pre-commit>=3.0.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-html>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/ireda8041-lab/SkyWaveERB"
Documentation = "https://github.com/ireda8041-lab/SkyWaveERB#readme"
Repository = "https://github.com/ireda8041-lab/SkyWaveERB"

[project.scripts]
skywave = "main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "services*", "ui*"]
exclude = ["tests*", "assets*", "docs*", "tools*", "exports*"]
namespaces = true

# ==================== Tool Configurations ====================

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["core", "services", "ui"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
exclude = ["tests/", "build/", "dist/"]
disable_error_code = ["misc", "no-any-return", "attr-defined", "name-defined", "assignment", "arg-type", "call-overload", "import-untyped"]
check_untyped_defs = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "PyQt6.*"
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "pymongo.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ui.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "core.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "services.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "security: marks tests as security tests",
    "performance: marks tests as performance tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["core", "services"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B110", "B311", "B404", "B603", "B606", "B607"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".git", ".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "B006", "E722"]

[tool.pylint.main]
ignore = ["tests", "build", "dist", ".venv"]
jobs = 0
extension-pkg-whitelist = ["PyQt6"]

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0915",  # too-many-statements
    "R0912",  # too-many-branches
    "R0902",  # too-many-instance-attributes
    "C0301",  # line-too-long
    "C0411",  # wrong-import-order
    "C0412",  # ungrouped-imports
    "C0413",  # wrong-import-position
    "C0415",  # import-outside-toplevel
    "W0612",  # unused-variable
    "W0613",  # unused-argument
    "W0622",  # redefined-builtin
    "W0621",  # redefined-outer-name
    "W0401",  # wildcard-import
    "W0614",  # unused-wildcard-import
    "R0801",  # duplicate-code
    "W0718",  # broad-exception-caught
    "W0718",  # broad-exception-caught
    "W0702",  # bare-except
    "W0703",  # broad-except
    "W0201",  # attribute-defined-outside-init
    "W0212",  # protected-access
    "W0611",  # unused-import
    "W0104",  # pointless-statement
    "W0603",  # global-statement
    "W0107",  # unnecessary-pass
    "E1101",  # no-member (false positives with PyQt6)
    "E0611",  # no-name-in-module
    "E0401",  # import-error
    "E1120",  # no-value-for-parameter
    "E1121",  # too-many-function-args
    "E1123",  # unexpected-keyword-arg
    "R1705",  # no-else-return
    "R1710",  # inconsistent-return-statements
    "R1720",  # no-else-raise
    "R0911",  # too-many-return-statements
    "C0327",  # mixed-line-endings
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-module-lines = 5000
max-public-methods = 40
max-positional-arguments = 15

[tool.pylint.refactoring]
max-nested-blocks = 10

[tool.pylint.basic]
argument-rgx = "^(__[a-zA-Z0-9_]+__|_?[a-z][a-zA-Z0-9_]*)$"
attr-rgx = "^(__[a-zA-Z0-9_]+__|_?[a-z][a-zA-Z0-9_]*)$"
function-rgx = "^(__[a-zA-Z0-9_]+__|_?[a-z][a-zA-Z0-9_]*)$"
method-rgx = "^(__[a-zA-Z0-9_]+__|_?[a-z][a-zA-Z0-9_]*)$"
variable-rgx = "^(__[a-zA-Z0-9_]+__|_?[a-z][a-zA-Z0-9_]*)$"
const-rgx = "^(__[a-zA-Z0-9_]+__|_?[A-Z][A-Z0-9_]*|_?[a-z][a-zA-Z0-9_]*)$"

